Port to NeoForge 1.20.4